apps/media/jelu/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jelu
  namespace: media
  labels:
    app: jelu
    app.kubernetes.io/name: jelu
    app.kubernetes.io/instance: jelu
    app.kubernetes.io/part-of: phoenyxlab
    app.kubernetes.io/managed-by: kustomize
spec:
  selector:
    app: jelu
  ports:
    - port: 11111
      targetPort: 11111
  type: ClusterIP
